--- a/package.json
+++ b/package.json
@@ -7,25 +7,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@supabase/ssr": "latest",
-    "@supabase/supabase-js": "latest",
     "autoprefixer": "10.4.17",
-    "clsx": "^2.1.0",
-    "next": "latest",
+    "clsx": "^2.1.1",
+    "next": "15.3.3",
     "postcss": "8.4.33",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "tailwindcss": "3.4.1",
     "typescript": "5.3.3"
   },
   "devDependencies": {
-    "@types/node": "20.11.5",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
+    "@types/node": "^22",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "encoding": "^0.1.13",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.1.4",
-    "prettier": "^3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.13"
+    "eslint": "^9",
+    "eslint-config-next": "15.3.3",
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "typescript": "^5",
+    "@tailwindcss/postcss": "^4"
   }
 }
